syntax = "proto3";

package pools;

import "cloud/disk_manager/internal/pkg/services/pools/protos/configure_pool_task.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/pools/protos";

////////////////////////////////////////////////////////////////////////////////

message OptimizeBaseDisksTaskState {
    repeated ConfigurePoolRequest Requests = 1;
}
